discussion/kv_engine/129853/129853_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/mad-hatter'

* commit 'couchbase/mad-hatter':
  MB-39441: Don't insert multiple error entries

Change-Id: Ib6b09901e7a4463279b308d014eb37702bde99ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-04 19:17:08.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-04 19:31:10.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24413/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/subdocument.cc:1547:32:
error: no member named "setState" in "Connection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24413/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28385/ : FAILURE

Compile error at ..\kv_engine\daemon\subdocument.cc(1547): error C2039: "setState": is not a member of "Connection" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28385/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2587/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/subdocument.cc:1547:32: error: no member named "setState" in "Connection" [clang-diagnostic-error]
                    connection.setState(StateMachine::State::send_data);
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/subdocument.cc:1547:41: error: use of undeclared identifier "StateMachine" [clang-diagnostic-error]
                    connection.setState(StateMachine::State::send_data);
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2587/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/subdocument.cc:1547:32:
error: no member named "setState" in "Connection" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2587/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3056/ : FAILURE

Compile error at [2020-06-04T19:19:02.672Z] ../kv_engine/daemon/subdocument.cc:1547:32:
error: no member named "setState" in "Connection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3994/ : FAILURE

Compile error at [2020-06-04T19:21:26.875Z] ../kv_engine/daemon/subdocument.cc:1547:32:
error: ?class Connection? has no member named ?setState?; did you mean ?state??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3994/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3953/ : FAILURE

Compile error at [2020-06-04T19:18:39.525Z] ../kv_engine/daemon/subdocument.cc:1547:32:
error: ?class Connection? has no member named ?setState?; did you mean ?state??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3953/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4065/ : FAILURE

Compile error at [2020-06-04T19:20:51.140Z] ../kv_engine/daemon/subdocument.cc:1547:32:
error: ?class Connection? has no member named ?setState?; did you mean ?state??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4065/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11830/ : FAILURE

Compile error at [2020-06-04T19:24:27.898Z] ../kv_engine/daemon/subdocument.cc:1547:32:
error: ?class Connection? has no member named ?setState?; did you mean ?state??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11830/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1092/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-06-04 19:59:35.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
